@@ -175,8 +175,10 @@ def initTestJVM(Task task, String rootDirName) {
     task.minHeapSize = xms
     task.maxHeapSize = xmx
     	
-    task.doFirst {	    	    
-		task.jvmArgs '-DupgradeProgramErrorMessage=' + upgradeProgramErrorMessage,
+    task.doFirst {
+
+		def args = [
+			'-DupgradeProgramErrorMessage=' + upgradeProgramErrorMessage,
 			'-DupgradeTimeErrorMessage=' + upgradeTimeErrorMessage,
 			'-Dlog4j.configurationFile=' + logPropertiesUrl,
 			'-Dghidra.test.property.batch.mode=true',
@@ -191,6 +193,7 @@ def initTestJVM(Task task, String rootDirName) {
 			'-Dcpu.core.override=8',
 			'-XX:ParallelGCThreads=8',
 			'-XX:+UseParallelGC',
+			'-XX:+UseCompactObjectHeaders',
 			'-Djava.awt.headless=false',
 			'-DDecompilerFunctionAnalyzer.enabled=false', // prevent long-winded analysis when testing (see DecompilerFunctionAnalyzer)
 			'-Dfile.encoding=UTF8',
@@ -198,7 +201,10 @@ def initTestJVM(Task task, String rootDirName) {
 			'-Duser.language=en',
 			'-Djdk.attach.allowAttachSelf',
 			'-XX:TieredStopAtLevel=1',
-			'-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=' + debugPort,
+			
+			// Note: this following arg is needed to enable remote debug.
+			
+			//'-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:' + debugPort,
 			
 			// Allow illegal reflective accesses
 			'--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
@@ -208,18 +214,8 @@ def initTestJVM(Task task, String rootDirName) {
 			'--add-opens=java.desktop/javax.swing=ALL-UNNAMED',			
 			'--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED'
 			
-			// Note: this args are used to speed-up the tests, but are not safe for production code
+			// Note: these args are used to speed-up the tests, but are not safe for production code
 			// -noverify and -XX:TieredStopAtLevel=1			
-			
-			// Note: modern remote debug invocation;
-			// 	-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000
-			
-			// 
-			// We removed these lines, which should not be needed in modern JVMs
-			//  -Xdebug
-			//  -Xnoagent
-			//  -Djava.compiler=NONE
-			//  -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000
 			
 			//
 			// TODO Future Updates:
@@ -230,6 +226,17 @@ def initTestJVM(Task task, String rootDirName) {
 			// For better command-line usage we will need to update tests such that they can 
 			// share a VM, enabling us to elimnate the use of 'forEver 1' in this file.
 			// 
+		]
+		
+		if (hasApiProjectDependency(project, ":FileSystem")) {
+			// If project has a FileSystem dependency we must assume there may be a
+			// Ghidra ApplicationConfiguration that will attempt to configure a
+			// serial filter factory which must be done in a lazy fashion when gradle
+			// test workers are used.
+			args << '-Djdk.serialFilterFactory=ghidra.framework.remote.GhidraSerialFilterFactory'	
+		}
+		
+		task.jvmArgs args	
 	}
 }
 /*********************************************************************************
